- Add driver auto probing for x86 features v4   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - x86/cpu: Fix overrun check in arch_print_cpu_modalias()   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - crypto: Add support for x86 cpuid   auto loading for x86 crypto drivers   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - x86/cpu: Clean up modalias feature matching   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - intel-idle: convert to x86_cpu_id auto probing   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - intel_idle: Fix ID for Nehalem-EX Xeon in device ID table   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - HWMON: Convert via-cputemp to x86 cpuid autoprobing   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - powernow-k7: Fix CPU family number   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - ACPI: Load acpi-cpufreq from processor driver automatically   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - intel_idle: Revert change of auto_demotion_flags for Nehalem   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - HWMON: Convert coretemp to x86 cpuid autoprobing   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - powernow-k6: Really enable auto-loading   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - X86: Introduce HW-Pstate scattered cpuid feature   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - cpufreq: Add support for x86 cpuinfo auto loading v4   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - x86: autoload microcode driver on Intel and AMD systems v2   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - CPU: Introduce ARCH_HAS_CPU_AUTOPROBE and X86 parts   (http://lists.opensuse.org/opensuse-kernel/2011-11/msg00075.html). - ACPI: remove duplicated lines o

--- a/series.conf
+++ b/series.conf
@@ -105,6 +105,27 @@
         ########################################################
 	patches.arch/x86_64-hpet-64bit-timer.patch
 
+    # Queued for 3.4, please remove the autoload patches then
+    # including the autoload_fixes below
+	patches.arch/001-x86_autoload.patch
+	patches.arch/002-x86_autoload.patch
+	patches.arch/003-x86_autoload.patch
+	patches.arch/004-x86_autoload.patch
+	patches.arch/005-x86_autoload.patch
+	patches.arch/006-x86_autoload.patch
+	patches.arch/007-x86_autoload.patch
+	patches.arch/008-x86_autoload.patch
+	patches.arch/009-x86_autoload.patch
+	patches.arch/010-x86_autoload.patch
+
+	patches.arch/001-x86_autoload_fixes.patch
+	patches.arch/002-x86_autoload_fixes.patch
+	patches.arch/003-x86_autoload_fixes.patch
+	patches.arch/004-x86_autoload_fixes.patch
+	patches.arch/005-x86_autoload_fixes.patch
+	patches.arch/006-x86_autoload_fixes.patch
+
+
 +needs_update	patches.arch/kvm-split-paravirt-ops-by-functionality
 +needs_update	patches.arch/kvm-only-export-selected-pv-ops-feature-structs
 +needs_update	patches.arch/kvm-split-the-KVM-pv-ops-support-by-feature
