nvme: Mark as broken on x86_32.

--- a/series.conf
+++ b/series.conf
@@ -55,6 +55,7 @@
 	patches.rpmify/rpm-kernel-config
 	patches.rpmify/split-package
 	patches.rpmify/cloneconfig.diff
+	patches.rpmify/nvme-broken
 
         ########################################################
         # kbuild/module infrastructure fixes
