nvme: Mark as broken on x86_32.

--- a/series.conf
+++ b/series.conf
@@ -39,4 +39,5 @@
 	########################################################
 	patches.rpmify/firmware-path
 	# build fixes
+	patches.rpmify/nvme-broken
 
