cpufreq/gx: Fix the compile error.

--- a/series.conf
+++ b/series.conf
@@ -125,7 +125,7 @@
 	patches.arch/004-x86_autoload_fixes.patch
 	patches.arch/005-x86_autoload_fixes.patch
 	patches.arch/006-x86_autoload_fixes.patch
-
+	patches.arch/007-x86_autoload_fixes.patch
 
 +needs_update	patches.arch/kvm-split-paravirt-ops-by-functionality
 +needs_update	patches.arch/kvm-only-export-selected-pv-ops-feature-structs
