--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/patch-3.2.1-2
 	patches.kernel.org/patch-3.2.2-3
 	patches.kernel.org/patch-3.2.3-4
+	patches.kernel.org/patch-3.2.5-6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -466,7 +467,6 @@
 	########################################################
 	# Suspend/Resume stuff
 	########################################################
-	patches.fixes/PM-Hibernate-Fix-s2disk-regression-related-to-freezi.patch
 
 	########################################################
 	# device-mapper
