--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-3.2.2-3
 	patches.kernel.org/patch-3.2.3-4
 	patches.kernel.org/patch-3.2.5-6
+	patches.kernel.org/patch-3.2.6-7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
