--- a/series.conf
+++ b/series.conf
@@ -31,7 +31,7 @@
 	patches.kernel.org/patch-3.2.1-2
 	patches.kernel.org/patch-3.2.2-3
 	patches.kernel.org/patch-3.2.3-4
-+jslaby	patches.kernel.org/patch-3.2.4-5
+	patches.kernel.org/patch-3.2.4-5
 	patches.kernel.org/patch-3.2.5-6
 	patches.kernel.org/patch-3.2.6-7
 
