--- a/series.conf
+++ b/series.conf
@@ -34,6 +34,7 @@
 	patches.kernel.org/patch-3.2.4-5
 	patches.kernel.org/patch-3.2.5-6
 	patches.kernel.org/patch-3.2.6-7
+	patches.kernel.org/patch-3.2.7-8
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
