--- a/series.conf
+++ b/series.conf
@@ -332,6 +332,7 @@
 	patches.suse/btrfs-simplify-btrfs_submit_bio_hook
 	patches.suse/btrfs-factor-out-tree-ops-merge_bio_hook-call
 	patches.suse/btrfs-submit_bio_hook-error-push-up
+	patches.suse/btrfs-_add_reloc_root-error-push-up
 	########################################################
 	# Reiserfs Patches
 	########################################################
