--- a/series.conf
+++ b/series.conf
@@ -371,6 +371,7 @@
 	patches.suse/btrfs-0012-Don-t-BUG_ON-errors-from-update_ref_for_cow.patch
 	patches.suse/btrfs-0013-Go-readonly-on-tree-errors-in-balance_level.patch
 	patches.suse/btrfs-0018-Don-t-BUG_ON-insert-errors-in-btrfs_alloc_dev_.patch
+	patches.suse/btrfs-0019-Remove-BUG_ON-from-__btrfs_alloc_chunk.patch
 	########################################################
 	# Reiserfs Patches
 	########################################################
