btrfs: Add btrfs_panic().

--- a/series.conf
+++ b/series.conf
@@ -294,7 +294,7 @@
 	########################################################
 	# btrfs
 	########################################################
-
+	patches.suse/btrfs-add-btrfs_panic
 	########################################################
 	# Reiserfs Patches
 	########################################################
