btrfs: btrfs_set_block_group_rw should return void.

--- a/series.conf
+++ b/series.conf
@@ -326,6 +326,7 @@
 	patches.suse/btrfs-disk-io-__setup_root-should-return-void
 	patches.suse/btrfs-disk-io-btrfs_destroy_delalloc_inodes-should-return-void
 	patches.suse/btrfs-extent-tree-btrfs_prepare_extent_commit-should-return-void
+	patches.suse/btrfs-extent-tree-btrfs_set_block_group_rw-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
