btrfs: btrfs_cleanup_fs_uuids should return void.

--- a/series.conf
+++ b/series.conf
@@ -311,6 +311,7 @@
 	patches.suse/btrfs-extent_io-check_page_locked-should-return-void
 	patches.suse/btrfs-extent_io-check_page_writeback-should-return-void
 	patches.suse/btrfs-extent_io-clear_extent_buffer_dirty-should-return-void
+	patches.suse/btrfs-volumes-btrfs_cleanup_fs_uuids-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
