btrfs: drop gfp_t from lock_extent.

--- a/series.conf
+++ b/series.conf
@@ -360,6 +360,7 @@
 	patches.suse/btrfs-add-extent_state-alloc-free-tracing
 	patches.suse/btrfs-btrfs_set_item_key_safe-should-bug-and-return-void
 	patches.suse/btrfs-scrub-functions-should-return-void
+	patches.suse/btrfs-drop-gfp_t-from-lock_extent
 	########################################################
 	# Reiserfs Patches
 	########################################################
