btrfs: btrfs_truncate_item should return void.

--- a/series.conf
+++ b/series.conf
@@ -340,6 +340,7 @@
 	patches.suse/btrfs-add_delayed_ref_head-should-return-void
 	patches.suse/btrfs-add_delayed_tree_ref-should-return-void
 	patches.suse/btrfs-add_delayed_data_ref-should-return-void
+	patches.suse/btrfs-btrfs_truncate_item-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
