--- a/series.conf
+++ b/series.conf
@@ -299,6 +299,7 @@
 	patches.suse/btrfs-panic-on-bad-rbtree-operations
 	patches.suse/btrfs-simplify-btrfs_insert_root
 	patches.suse/btrfs-btrfs_tree_unlock-should-return-void
+	patches.suse/btrfs-clean_tree_block-should-panic-on-error-and-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
