btrfs: btrfs_end_log_trans should return void.

--- a/series.conf
+++ b/series.conf
@@ -319,6 +319,7 @@
 	patches.suse/btrfs-async_thread-run_ordered_completions-should-return-void
 	patches.suse/btrfs-async_thread-btrfs_stop_workers-should-return-void
 	patches.suse/btrfs-async_thread-btrfs_requeue_work-should-return-void
+	patches.suse/btrfs-tree-log-btrfs_end_log_trans-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
