btrfs: add varargs to btrfs_error.

--- a/series.conf
+++ b/series.conf
@@ -373,6 +373,7 @@
 	patches.suse/btrfs-0018-Don-t-BUG_ON-insert-errors-in-btrfs_alloc_dev_.patch
 	patches.suse/btrfs-0019-Remove-BUG_ON-from-__btrfs_alloc_chunk.patch
 	patches.suse/btrfs-0020-Remove-BUG_ON-from-__finish_chunk_alloc.patch
+	patches.suse/btrfs-error-varargs
 	########################################################
 	# Reiserfs Patches
 	########################################################
