btrfs: Go readonly on tree errors in balance_level.

--- a/series.conf
+++ b/series.conf
@@ -369,6 +369,7 @@
 	patches.suse/btrfs-0005-Don-t-BUG_ON-errors-in-__finish_chunk_alloc.patch
 	patches.suse/btrfs-0011-Go-readonly-on-bad-extent-refs-in-update_ref_f.patch
 	patches.suse/btrfs-0012-Don-t-BUG_ON-errors-from-update_ref_for_cow.patch
+	patches.suse/btrfs-0013-Go-readonly-on-tree-errors-in-balance_level.patch
 	########################################################
 	# Reiserfs Patches
 	########################################################
