btrfs: Don't BUG_ON kzalloc error in btrfs_lookup_csums_range().

--- a/series.conf
+++ b/series.conf
@@ -365,6 +365,7 @@
 	patches.suse/btrfs-btrfs_drop_snapshot-should-return-int
 	patches.suse/btrfs-0001-Don-t-BUG_ON-errors-from-btrfs_create_subvol_r.patch
 	patches.suse/btrfs-0002-Don-t-BUG_ON-errors-in-update_ref_for_cow.patch
+	patches.suse/btrfs-0003-Don-t-BUG_ON-kzalloc-error-in-btrfs_lookup_csu.patch
 	########################################################
 	# Reiserfs Patches
 	########################################################
