--- a/series.conf
+++ b/series.conf
@@ -325,6 +325,7 @@
 	patches.suse/btrfs-btrfs_invalidate_inodes-should-return-void
 	patches.suse/btrfs-disk-io-__setup_root-should-return-void
 	patches.suse/btrfs-disk-io-btrfs_destroy_delalloc_inodes-should-return-void
+	patches.suse/btrfs-extent-tree-btrfs_prepare_extent_commit-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
