btrfs: copy_for_split should return void.

--- a/series.conf
+++ b/series.conf
@@ -343,6 +343,7 @@
 	patches.suse/btrfs-btrfs_truncate_item-should-return-void
 	patches.suse/btrfs-btrfs_extend_item-should-return-void
 	patches.suse/btrfs-end_compressed_writeback-should-return-void
+	patches.suse/btrfs-copy_for_split-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
