--- a/series.conf
+++ b/series.conf
@@ -356,6 +356,7 @@
 	patches.suse/btrfs-del_fs_roots-should-return-void
 	patches.suse/btrfs-btrfs_destroy_ordered_operations-should-return-void
 	patches.suse/btrfs-btrfs_destroy_ordered_extents-should-return-void
+	patches.suse/btrfs-btrfs_destroy_pending_snapshots-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
