--- a/series.conf
+++ b/series.conf
@@ -366,6 +366,7 @@
 	patches.suse/btrfs-0001-Don-t-BUG_ON-errors-from-btrfs_create_subvol_r.patch
 	patches.suse/btrfs-0002-Don-t-BUG_ON-errors-in-update_ref_for_cow.patch
 	patches.suse/btrfs-0003-Don-t-BUG_ON-kzalloc-error-in-btrfs_lookup_csu.patch
+	patches.suse/btrfs-0005-Don-t-BUG_ON-errors-in-__finish_chunk_alloc.patch
 	########################################################
 	# Reiserfs Patches
 	########################################################
