btrfs: btrfs_wait_ordered_range should return void.

--- a/series.conf
+++ b/series.conf
@@ -348,6 +348,7 @@
 	patches.suse/btrfs-btrfs_put_ordered_extent-should-return-void
 	patches.suse/btrfs-__btrfs_remove_ordered_extent-should-return-void
 	patches.suse/btrfs-btrfs_wait_ordered_extents-should-return-void
+	patches.suse/btrfs-btrfs_wait_ordered_range-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
