--- a/series.conf
+++ b/series.conf
@@ -345,6 +345,7 @@
 	patches.suse/btrfs-end_compressed_writeback-should-return-void
 	patches.suse/btrfs-copy_for_split-should-return-void
 	patches.suse/btrfs-extent-tree-update_inline_extent_backref-should-return-void
+	patches.suse/btrfs-btrfs_put_ordered_extent-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
