btrfs: Simplify btrfs_submit_bio_hook.

--- a/series.conf
+++ b/series.conf
@@ -329,6 +329,7 @@
 	patches.suse/btrfs-extent-tree-btrfs_set_block_group_rw-should-return-void
 	patches.suse/btrfs-extent-tree-setup_inline_extent_backref-should-return-void
 	patches.suse/btrfs-fix-kfree-of-member-instead-of-structure
+	patches.suse/btrfs-simplify-btrfs_submit_bio_hook
 	########################################################
 	# Reiserfs Patches
 	########################################################
