btrfs: add_delayed_data_ref should return void.

--- a/series.conf
+++ b/series.conf
@@ -339,6 +339,7 @@
 	patches.suse/btrfs-insert_ptr-should-return-void
 	patches.suse/btrfs-add_delayed_ref_head-should-return-void
 	patches.suse/btrfs-add_delayed_tree_ref-should-return-void
+	patches.suse/btrfs-add_delayed_data_ref-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
