btrfs: del_fs_roots should return void.

--- a/series.conf
+++ b/series.conf
@@ -353,6 +353,7 @@
 	patches.suse/btrfs-btrfs_add_ordered_operation-should-return-void
 	patches.suse/btrfs-btrfs_add_ordered_sum-should-return-void
 	patches.suse/btrfs-btrfs_free_fs_root-should-return-void
+	patches.suse/btrfs-del_fs_roots-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
