btrfs: add_delayed_ref_head should return void.

--- a/series.conf
+++ b/series.conf
@@ -337,6 +337,7 @@
 	patches.suse/btrfs-setup_items_for_insert-should-return-void
 	patches.suse/btrfs-del_ptr-should-return-void
 	patches.suse/btrfs-insert_ptr-should-return-void
+	patches.suse/btrfs-add_delayed_ref_head-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
