--- a/series.conf
+++ b/series.conf
@@ -342,6 +342,7 @@
 	patches.suse/btrfs-add_delayed_data_ref-should-return-void
 	patches.suse/btrfs-btrfs_truncate_item-should-return-void
 	patches.suse/btrfs-btrfs_extend_item-should-return-void
+	patches.suse/btrfs-end_compressed_writeback-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
