--- a/series.conf
+++ b/series.conf
@@ -367,6 +367,7 @@
 	patches.suse/btrfs-0002-Don-t-BUG_ON-errors-in-update_ref_for_cow.patch
 	patches.suse/btrfs-0003-Don-t-BUG_ON-kzalloc-error-in-btrfs_lookup_csu.patch
 	patches.suse/btrfs-0005-Don-t-BUG_ON-errors-in-__finish_chunk_alloc.patch
+	patches.suse/btrfs-0011-Go-readonly-on-bad-extent-refs-in-update_ref_f.patch
 	########################################################
 	# Reiserfs Patches
 	########################################################
