btrfs: add_delayed_tree_ref should return void.

--- a/series.conf
+++ b/series.conf
@@ -338,6 +338,7 @@
 	patches.suse/btrfs-del_ptr-should-return-void
 	patches.suse/btrfs-insert_ptr-should-return-void
 	patches.suse/btrfs-add_delayed_ref_head-should-return-void
+	patches.suse/btrfs-add_delayed_tree_ref-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
