--- a/series.conf
+++ b/series.conf
@@ -322,6 +322,7 @@
 	patches.suse/btrfs-tree-log-btrfs_end_log_trans-should-return-void
 	patches.suse/btrfs-tree-log-wait_for_writer-should-return-void
 	patches.suse/btrfs-btrfs_init_compress-should-return-void
+	patches.suse/btrfs-btrfs_invalidate_inodes-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
