--- a/series.conf
+++ b/series.conf
@@ -313,6 +313,7 @@
 	patches.suse/btrfs-extent_io-clear_extent_buffer_dirty-should-return-void
 	patches.suse/btrfs-volumes-btrfs_cleanup_fs_uuids-should-return-void
 	patches.suse/btrfs-volumes-run_scheduled_bios-should-return-void
+	patches.suse/btrfs-volumes-btrfs_close_extra_devices-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
