btrfs: find_and_setup_root error push-up.

--- a/series.conf
+++ b/series.conf
@@ -302,6 +302,7 @@
 	patches.suse/btrfs-clean_tree_block-should-panic-on-error-and-return-void
 	patches.suse/btrfs-btrfs_reserve_extent-check-sinfo
 	patches.suse/btrfs-clear_extent_bit-api-change
+	patches.suse/btrfs-find_and_setup_root-error-push-up
 	########################################################
 	# Reiserfs Patches
 	########################################################
