--- a/series.conf
+++ b/series.conf
@@ -352,6 +352,7 @@
 	patches.suse/btrfs-btrfs_run_ordered_operations
 	patches.suse/btrfs-btrfs_add_ordered_operation-should-return-void
 	patches.suse/btrfs-btrfs_add_ordered_sum-should-return-void
+	patches.suse/btrfs-btrfs_free_fs_root-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
