btrfs: update_inline_extent_backref should return void.

--- a/series.conf
+++ b/series.conf
@@ -344,6 +344,7 @@
 	patches.suse/btrfs-btrfs_extend_item-should-return-void
 	patches.suse/btrfs-end_compressed_writeback-should-return-void
 	patches.suse/btrfs-copy_for_split-should-return-void
+	patches.suse/btrfs-extent-tree-update_inline_extent_backref-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
