btrfs: Don't BUG_ON insert errors in btrfs_alloc_dev_extent().

--- a/series.conf
+++ b/series.conf
@@ -370,6 +370,7 @@
 	patches.suse/btrfs-0011-Go-readonly-on-bad-extent-refs-in-update_ref_f.patch
 	patches.suse/btrfs-0012-Don-t-BUG_ON-errors-from-update_ref_for_cow.patch
 	patches.suse/btrfs-0013-Go-readonly-on-tree-errors-in-balance_level.patch
+	patches.suse/btrfs-0018-Don-t-BUG_ON-insert-errors-in-btrfs_alloc_dev_.patch
 	########################################################
 	# Reiserfs Patches
 	########################################################
