--- a/series.conf
+++ b/series.conf
@@ -306,6 +306,7 @@
 	patches.suse/btrfs-btrfs_update_root-error-push-up
 	patches.suse/btrfs-extent_io-wait_on_state-should-return-void
 	patches.suse/btrfs-extent_io-wait_extent_bit-should-return-void
+	patches.suse/btrfs-extent_io-__unlock_for_delalloc-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
