--- a/series.conf
+++ b/series.conf
@@ -330,6 +330,7 @@
 	patches.suse/btrfs-extent-tree-setup_inline_extent_backref-should-return-void
 	patches.suse/btrfs-fix-kfree-of-member-instead-of-structure
 	patches.suse/btrfs-simplify-btrfs_submit_bio_hook
+	patches.suse/btrfs-factor-out-tree-ops-merge_bio_hook-call
 	########################################################
 	# Reiserfs Patches
 	########################################################
