btrfs: ->submit_bio_hook error push-up.

--- a/series.conf
+++ b/series.conf
@@ -331,6 +331,7 @@
 	patches.suse/btrfs-fix-kfree-of-member-instead-of-structure
 	patches.suse/btrfs-simplify-btrfs_submit_bio_hook
 	patches.suse/btrfs-factor-out-tree-ops-merge_bio_hook-call
+	patches.suse/btrfs-submit_bio_hook-error-push-up
 	########################################################
 	# Reiserfs Patches
 	########################################################
