btrfs: avoid NULL deref in btrfs_reserve_extent with DEBUG_ENOSPC.

--- a/series.conf
+++ b/series.conf
@@ -300,6 +300,7 @@
 	patches.suse/btrfs-simplify-btrfs_insert_root
 	patches.suse/btrfs-btrfs_tree_unlock-should-return-void
 	patches.suse/btrfs-clean_tree_block-should-panic-on-error-and-return-void
+	patches.suse/btrfs-btrfs_reserve_extent-check-sinfo
 	########################################################
 	# Reiserfs Patches
 	########################################################
