btrfs: Catch locking failures in {set,clear,convert}_extent_bit.

--- a/series.conf
+++ b/series.conf
@@ -295,6 +295,7 @@
 	# btrfs
 	########################################################
 	patches.suse/btrfs-add-btrfs_panic
+	patches.suse/btrfs-catch-locking-failures-in-set-clear-extent_bit
 	########################################################
 	# Reiserfs Patches
 	########################################################
