--- a/series.conf
+++ b/series.conf
@@ -303,6 +303,7 @@
 	patches.suse/btrfs-btrfs_reserve_extent-check-sinfo
 	patches.suse/btrfs-clear_extent_bit-api-change
 	patches.suse/btrfs-find_and_setup_root-error-push-up
+	patches.suse/btrfs-btrfs_update_root-error-push-up
 	########################################################
 	# Reiserfs Patches
 	########################################################
