btrfs: check_page_writeback should return void.

--- a/series.conf
+++ b/series.conf
@@ -309,6 +309,7 @@
 	patches.suse/btrfs-extent_io-__unlock_for_delalloc-should-return-void
 	patches.suse/btrfs-extent_io-check_page_uptodate-should-return-void
 	patches.suse/btrfs-extent_io-check_page_locked-should-return-void
+	patches.suse/btrfs-extent_io-check_page_writeback-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
