--- a/series.conf
+++ b/series.conf
@@ -327,6 +327,7 @@
 	patches.suse/btrfs-disk-io-btrfs_destroy_delalloc_inodes-should-return-void
 	patches.suse/btrfs-extent-tree-btrfs_prepare_extent_commit-should-return-void
 	patches.suse/btrfs-extent-tree-btrfs_set_block_group_rw-should-return-void
+	patches.suse/btrfs-extent-tree-setup_inline_extent_backref-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
