btrfs: insert_ptr should return void.

--- a/series.conf
+++ b/series.conf
@@ -336,6 +336,7 @@
 	patches.suse/btrfs-fixup_low_keys-should-return-void
 	patches.suse/btrfs-setup_items_for_insert-should-return-void
 	patches.suse/btrfs-del_ptr-should-return-void
+	patches.suse/btrfs-insert_ptr-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
