--- a/series.conf
+++ b/series.conf
@@ -341,6 +341,7 @@
 	patches.suse/btrfs-add_delayed_tree_ref-should-return-void
 	patches.suse/btrfs-add_delayed_data_ref-should-return-void
 	patches.suse/btrfs-btrfs_truncate_item-should-return-void
+	patches.suse/btrfs-btrfs_extend_item-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
