--- a/series.conf
+++ b/series.conf
@@ -310,6 +310,7 @@
 	patches.suse/btrfs-extent_io-check_page_uptodate-should-return-void
 	patches.suse/btrfs-extent_io-check_page_locked-should-return-void
 	patches.suse/btrfs-extent_io-check_page_writeback-should-return-void
+	patches.suse/btrfs-extent_io-clear_extent_buffer_dirty-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
