--- a/series.conf
+++ b/series.conf
@@ -335,6 +335,7 @@
 	patches.suse/btrfs-_add_reloc_root-error-push-up
 	patches.suse/btrfs-fixup_low_keys-should-return-void
 	patches.suse/btrfs-setup_items_for_insert-should-return-void
+	patches.suse/btrfs-del_ptr-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
