--- a/series.conf
+++ b/series.conf
@@ -334,6 +334,7 @@
 	patches.suse/btrfs-submit_bio_hook-error-push-up
 	patches.suse/btrfs-_add_reloc_root-error-push-up
 	patches.suse/btrfs-fixup_low_keys-should-return-void
+	patches.suse/btrfs-setup_items_for_insert-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
