btrfs: btrfs_wait_ordered_extents should return void.

--- a/series.conf
+++ b/series.conf
@@ -347,6 +347,7 @@
 	patches.suse/btrfs-extent-tree-update_inline_extent_backref-should-return-void
 	patches.suse/btrfs-btrfs_put_ordered_extent-should-return-void
 	patches.suse/btrfs-__btrfs_remove_ordered_extent-should-return-void
+	patches.suse/btrfs-btrfs_wait_ordered_extents-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
