--- a/series.conf
+++ b/series.conf
@@ -324,6 +324,7 @@
 	patches.suse/btrfs-btrfs_init_compress-should-return-void
 	patches.suse/btrfs-btrfs_invalidate_inodes-should-return-void
 	patches.suse/btrfs-disk-io-__setup_root-should-return-void
+	patches.suse/btrfs-disk-io-btrfs_destroy_delalloc_inodes-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
