btrfs: btrfs_add_ordered_sum should return void.

--- a/series.conf
+++ b/series.conf
@@ -351,6 +351,7 @@
 	patches.suse/btrfs-btrfs_wait_ordered_range-should-return-void
 	patches.suse/btrfs-btrfs_run_ordered_operations
 	patches.suse/btrfs-btrfs_add_ordered_operation-should-return-void
+	patches.suse/btrfs-btrfs_add_ordered_sum-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
