btrfs: btrfs_stop_workers should return void.

--- a/series.conf
+++ b/series.conf
@@ -317,6 +317,7 @@
 	patches.suse/btrfs-volumes-schedule_bio-should-return-void
 	patches.suse/btrfs-volumes-fill_device_from_item-should-return-void
 	patches.suse/btrfs-async_thread-run_ordered_completions-should-return-void
+	patches.suse/btrfs-async_thread-btrfs_stop_workers-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
