--- a/series.conf
+++ b/series.conf
@@ -358,6 +358,7 @@
 	patches.suse/btrfs-btrfs_destroy_ordered_extents-should-return-void
 	patches.suse/btrfs-btrfs_destroy_pending_snapshots-should-return-void
 	patches.suse/btrfs-add-extent_state-alloc-free-tracing
+	patches.suse/btrfs-btrfs_set_item_key_safe-should-bug-and-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
