--- a/series.conf
+++ b/series.conf
@@ -320,6 +320,7 @@
 	patches.suse/btrfs-async_thread-btrfs_stop_workers-should-return-void
 	patches.suse/btrfs-async_thread-btrfs_requeue_work-should-return-void
 	patches.suse/btrfs-tree-log-btrfs_end_log_trans-should-return-void
+	patches.suse/btrfs-tree-log-wait_for_writer-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
