--- a/series.conf
+++ b/series.conf
@@ -316,6 +316,7 @@
 	patches.suse/btrfs-volumes-btrfs_close_extra_devices-should-return-void
 	patches.suse/btrfs-volumes-schedule_bio-should-return-void
 	patches.suse/btrfs-volumes-fill_device_from_item-should-return-void
+	patches.suse/btrfs-async_thread-run_ordered_completions-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
