--- a/series.conf
+++ b/series.conf
@@ -315,6 +315,7 @@
 	patches.suse/btrfs-volumes-run_scheduled_bios-should-return-void
 	patches.suse/btrfs-volumes-btrfs_close_extra_devices-should-return-void
 	patches.suse/btrfs-volumes-schedule_bio-should-return-void
+	patches.suse/btrfs-volumes-fill_device_from_item-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
