--- a/series.conf
+++ b/series.conf
@@ -333,6 +333,7 @@
 	patches.suse/btrfs-factor-out-tree-ops-merge_bio_hook-call
 	patches.suse/btrfs-submit_bio_hook-error-push-up
 	patches.suse/btrfs-_add_reloc_root-error-push-up
+	patches.suse/btrfs-fixup_low_keys-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
