--- a/series.conf
+++ b/series.conf
@@ -308,6 +308,7 @@
 	patches.suse/btrfs-extent_io-wait_extent_bit-should-return-void
 	patches.suse/btrfs-extent_io-__unlock_for_delalloc-should-return-void
 	patches.suse/btrfs-extent_io-check_page_uptodate-should-return-void
+	patches.suse/btrfs-extent_io-check_page_locked-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
