--- a/series.conf
+++ b/series.conf
@@ -328,6 +328,7 @@
 	patches.suse/btrfs-extent-tree-btrfs_prepare_extent_commit-should-return-void
 	patches.suse/btrfs-extent-tree-btrfs_set_block_group_rw-should-return-void
 	patches.suse/btrfs-extent-tree-setup_inline_extent_backref-should-return-void
+	patches.suse/btrfs-fix-kfree-of-member-instead-of-structure
 	########################################################
 	# Reiserfs Patches
 	########################################################
