btrfs: Don't BUG_ON() errors in update_ref_for_cow().

--- a/series.conf
+++ b/series.conf
@@ -364,6 +364,7 @@
 	patches.suse/btrfs-split-extent_state-ops
 	patches.suse/btrfs-btrfs_drop_snapshot-should-return-int
 	patches.suse/btrfs-0001-Don-t-BUG_ON-errors-from-btrfs_create_subvol_r.patch
+	patches.suse/btrfs-0002-Don-t-BUG_ON-errors-in-update_ref_for_cow.patch
 	########################################################
 	# Reiserfs Patches
 	########################################################
