btrfs: scrub functions should return void.

--- a/series.conf
+++ b/series.conf
@@ -359,6 +359,7 @@
 	patches.suse/btrfs-btrfs_destroy_pending_snapshots-should-return-void
 	patches.suse/btrfs-add-extent_state-alloc-free-tracing
 	patches.suse/btrfs-btrfs_set_item_key_safe-should-bug-and-return-void
+	patches.suse/btrfs-scrub-functions-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
