--- a/series.conf
+++ b/series.conf
@@ -297,6 +297,7 @@
 	patches.suse/btrfs-add-btrfs_panic
 	patches.suse/btrfs-catch-locking-failures-in-set-clear-extent_bit
 	patches.suse/btrfs-panic-on-bad-rbtree-operations
+	patches.suse/btrfs-simplify-btrfs_insert_root
 	########################################################
 	# Reiserfs Patches
 	########################################################
