--- a/series.conf
+++ b/series.conf
@@ -304,6 +304,7 @@
 	patches.suse/btrfs-clear_extent_bit-api-change
 	patches.suse/btrfs-find_and_setup_root-error-push-up
 	patches.suse/btrfs-btrfs_update_root-error-push-up
+	patches.suse/btrfs-extent_io-wait_on_state-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
