--- a/series.conf
+++ b/series.conf
@@ -298,6 +298,7 @@
 	patches.suse/btrfs-catch-locking-failures-in-set-clear-extent_bit
 	patches.suse/btrfs-panic-on-bad-rbtree-operations
 	patches.suse/btrfs-simplify-btrfs_insert_root
+	patches.suse/btrfs-btrfs_tree_unlock-should-return-void
 	########################################################
 	# Reiserfs Patches
 	########################################################
