btrfs: Handle EIO.

--- a/series.conf
+++ b/series.conf
@@ -374,6 +374,7 @@
 	patches.suse/btrfs-0019-Remove-BUG_ON-from-__btrfs_alloc_chunk.patch
 	patches.suse/btrfs-0020-Remove-BUG_ON-from-__finish_chunk_alloc.patch
 	patches.suse/btrfs-error-varargs
+	patches.suse/btrfs-handle-EIO
 	########################################################
 	# Reiserfs Patches
 	########################################################
