--- a/series.conf
+++ b/series.conf
@@ -363,6 +363,7 @@
 	patches.suse/btrfs-drop-gfp_t-from-lock_extent
 	patches.suse/btrfs-split-extent_state-ops
 	patches.suse/btrfs-btrfs_drop_snapshot-should-return-int
+	patches.suse/btrfs-0001-Don-t-BUG_ON-errors-from-btrfs_create_subvol_r.patch
 	########################################################
 	# Reiserfs Patches
 	########################################################
