btrfs: btrfs_drop_snapshot should return int.

--- a/series.conf
+++ b/series.conf
@@ -362,6 +362,7 @@
 	patches.suse/btrfs-scrub-functions-should-return-void
 	patches.suse/btrfs-drop-gfp_t-from-lock_extent
 	patches.suse/btrfs-split-extent_state-ops
+	patches.suse/btrfs-btrfs_drop_snapshot-should-return-int
 	########################################################
 	# Reiserfs Patches
 	########################################################
