staging: lirc_serial: Free resources on failure paths of lirc_serial_probe() (bnc#750106).

--- a/series.conf
+++ b/series.conf
@@ -562,6 +562,7 @@
 	# new drivers that are going upstream
         ########################################################
 	patches.fixes/media-staging-lirc_serial-Do-not-assume-error-codes-.patch
+	patches.fixes/media-staging-lirc_serial-Free-resources-on-failure-.patch
 
         ########################################################
 	# You'd better have a good reason for adding a patch
