--- a/series.conf
+++ b/series.conf
@@ -561,6 +561,7 @@
 	# Staging tree patches
 	# new drivers that are going upstream
         ########################################################
+	patches.fixes/media-staging-lirc_serial-Do-not-assume-error-codes-.patch
 
         ########################################################
 	# You'd better have a good reason for adding a patch
