- Linux 3.2.10. - Delete   patches.fixes/media-staging-lirc_serial-Do-not-assume-error-codes-.patch. - Delete   patches.fixes/media-staging-lirc_serial-Free-resources-on-failure-.patch.

--- a/series.conf
+++ b/series.conf
@@ -36,6 +36,7 @@
 	patches.kernel.org/patch-3.2.6-7
 	patches.kernel.org/patch-3.2.7-8
 	patches.kernel.org/patch-3.2.8-9
+	patches.kernel.org/patch-3.2.9-10
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -561,8 +562,6 @@
 	# Staging tree patches
 	# new drivers that are going upstream
         ########################################################
-	patches.fixes/media-staging-lirc_serial-Do-not-assume-error-codes-.patch
-	patches.fixes/media-staging-lirc_serial-Free-resources-on-failure-.patch
 
         ########################################################
 	# You'd better have a good reason for adding a patch
