rpm: include crtsavres.o on ppc

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -616,6 +616,12 @@ if [ %CONFIG_MODULES = y ]; then
 	fi
     fi
 
+    # arch/powerpc/lib/crtsavres.o is required for building external
+    # modules on powerpc
+    if [ -f %kernel_build_dir/arch/powerpc/lib/crtsavres.o ]; then
+	echo arch/powerpc/lib/crtsavres.o >> %my_builddir/obj-files
+    fi
+
     tar -cf - -T %my_builddir/obj-files | \
 	tar -xf - -C %rpm_install_dir/%cpu_arch_flavor
     # bnc#507084
