--- a/series.conf
+++ b/series.conf
@@ -732,7 +732,7 @@
 	patches.xen/xen3-patch-3.0
 	patches.xen/xen3-patch-3.1
 	patches.xen/xen3-patch-3.2
-	patches.xen/xen3-patch-3.3-rc5
+	patches.xen/xen3-patch-3.3
 	patches.xen/xen3-004-x86_autoload.patch
 	patches.xen/xen3-006-x86_autoload.patch
 	patches.xen/xen3-009-x86_autoload.patch
