--- a/series.conf
+++ b/series.conf
@@ -390,6 +390,10 @@
 	patches.suse/btrfs-0020-Remove-BUG_ON-from-__finish_chunk_alloc.patch
 	patches.suse/btrfs-error-varargs
 	patches.suse/btrfs-handle-EIO
+
+	# 3.3
+	patches.suse/btrfs-REVERT-increase-the-global-block-reserve-estim.patch
+
 	########################################################
 	# Reiserfs Patches
 	########################################################
