--- a/series.conf
+++ b/series.conf
@@ -277,6 +277,7 @@
 	patches.suse/msft-hv-0331-drivers-hv-Get-rid-of-some-unnecessary-code.patch
 	patches.suse/msft-hv-0332-drivers-hv-kvp-Add-cleanup-connector-defines.patch
 	patches.suse/msft-hv-0333-drivers-hv-kvp-Move-the-contents-of-hv_kvp.h-to-h.patch
+	patches.suse/msft-hv-0334-net-hyperv-Convert-camel-cased-variables-in-rndis_f.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 
         ########################################################
