Tools: hv: Fully support the new KVP verbs in the user level daemon.

--- a/series.conf
+++ b/series.conf
@@ -288,6 +288,7 @@
 	patches.suse/msft-hv-0342-net-hyperv-Add-support-for-vlan-trunking-from-guest.patch
 	patches.suse/msft-hv-0343-Drivers-hv-Add-new-message-types-to-enhance-KVP.patch
 	patches.suse/msft-hv-0344-Drivers-hv-Support-the-newly-introduced-KVP-messag.patch
+	patches.suse/msft-hv-0345-Tools-hv-Fully-support-the-new-KVP-verbs-in-the-us.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 
         ########################################################
