--- a/series.conf
+++ b/series.conf
@@ -287,6 +287,7 @@
 	patches.suse/msft-hv-0341-net-hyperv-Fix-data-corruption-in-rndis_filter_rece.patch
 	patches.suse/msft-hv-0342-net-hyperv-Add-support-for-vlan-trunking-from-guest.patch
 	patches.suse/msft-hv-0343-Drivers-hv-Add-new-message-types-to-enhance-KVP.patch
+	patches.suse/msft-hv-0344-Drivers-hv-Support-the-newly-introduced-KVP-messag.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 
         ########################################################
