--- a/series.conf
+++ b/series.conf
@@ -290,6 +290,7 @@
 	patches.suse/msft-hv-0344-Drivers-hv-Support-the-newly-introduced-KVP-messag.patch
 	patches.suse/msft-hv-0345-Tools-hv-Fully-support-the-new-KVP-verbs-in-the-us.patch
 	patches.suse/msft-hv-0346-Tools-hv-Support-enumeration-from-all-the-pools.patch
+	patches.suse/msft-hv-0347-net-hyperv-Fix-the-code-handling-tx-busy.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 
         ########################################################
