tools: hv: Use hyperv.h to get the KVP definitions.

--- a/series.conf
+++ b/series.conf
@@ -281,6 +281,7 @@
 	patches.suse/msft-hv-0335-net-hyperv-Correct-the-assignment-in-netvsc_recv_ca.patch
 	patches.suse/msft-hv-0336-net-hyperv-Remove-the-unnecessary-memset-in-rndis_f.patch
 	patches.suse/msft-hv-0337-drivers-hv-Cleanup-the-kvp-related-state-in-hyperv.patch
+	patches.suse/msft-hv-0338-tools-hv-Use-hyperv.h-to-get-the-KVP-definitions.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 
         ########################################################
