--- a/series.conf
+++ b/series.conf
@@ -285,6 +285,7 @@
 	patches.suse/msft-hv-0339-drivers-hv-kvp-Cleanup-the-kernel-user-protocol.patch
 	patches.suse/msft-hv-0340-drivers-hv-Increase-the-number-of-VCPUs-supported.patch
 	patches.suse/msft-hv-0341-net-hyperv-Fix-data-corruption-in-rndis_filter_rece.patch
+	patches.suse/msft-hv-0342-net-hyperv-Add-support-for-vlan-trunking-from-guest.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 
         ########################################################
