drivers: hv: Get rid of some unnecessary code.

--- a/series.conf
+++ b/series.conf
@@ -274,6 +274,7 @@
 	patches.suse/msft-hv-0322-Staging-hv-storvsc-Consolidate-the-request-struct.patch
 	patches.suse/msft-hv-0323-Staging-hv-storvsc-Consolidate-all-the-wire-proto.patch
 	patches.suse/msft-hv-0324-Staging-hv-storvsc-Move-the-storage-driver-out-of.patch
+	patches.suse/msft-hv-0331-drivers-hv-Get-rid-of-some-unnecessary-code.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 
         ########################################################
