--- a/series.conf
+++ b/series.conf
@@ -283,6 +283,7 @@
 	patches.suse/msft-hv-0337-drivers-hv-Cleanup-the-kvp-related-state-in-hyperv.patch
 	patches.suse/msft-hv-0338-tools-hv-Use-hyperv.h-to-get-the-KVP-definitions.patch
 	patches.suse/msft-hv-0339-drivers-hv-kvp-Cleanup-the-kernel-user-protocol.patch
+	patches.suse/msft-hv-0340-drivers-hv-Increase-the-number-of-VCPUs-supported.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 
         ########################################################
