net/hyperv: Remove the unnecessary memset in rndis_filter_send().

--- a/series.conf
+++ b/series.conf
@@ -279,6 +279,7 @@
 	patches.suse/msft-hv-0333-drivers-hv-kvp-Move-the-contents-of-hv_kvp.h-to-h.patch
 	patches.suse/msft-hv-0334-net-hyperv-Convert-camel-cased-variables-in-rndis_f.patch
 	patches.suse/msft-hv-0335-net-hyperv-Correct-the-assignment-in-netvsc_recv_ca.patch
+	patches.suse/msft-hv-0336-net-hyperv-Remove-the-unnecessary-memset-in-rndis_f.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 
         ########################################################
