net: fix a potential rcu_read_lock() imbalance in rt6_fill_node() (bnc#754186).

--- a/series.conf
+++ b/series.conf
@@ -280,6 +280,7 @@
         # Networking, IPv6
         ########################################################
 	patches.fixes/bridge-module-get-put.patch
+	patches.fixes/net-fix-a-potential-rcu_read_lock-imbalance-in-rt6_fill_node
 
 	########################################################
 	# NFS
