drm/i915: suspend fbdev device around suspend/hibernate (bnc#732908).

--- a/series.conf
+++ b/series.conf
@@ -254,6 +254,7 @@
 	########################################################
 	# AGP, graphics related stuff
 	########################################################
+	patches.drivers/drm-i915-suspend-fbdev-device-around-suspend-hiberna
 
 	########################################################
 	# Suse specific stuff
