Update AppArmor for 3.4.   - apparmor: Add "profiles" list to sysfs.

--- a/series.conf
+++ b/series.conf
@@ -478,9 +478,8 @@
 	##########################################################
 	# AppArmor
 	##########################################################
-+jeffm	patches.apparmor/apparmor-compatibility-patch-for-v5-network-control
-+jeffm	patches.apparmor/apparmor-compatibility-patch-for-v5-interface
-+jeffm	patches.apparmor/apparmor-allow-dfa-backward-compatibility-with-broken-userspace
+	patches.apparmor/apparmor-compatibility-patch-for-v5-network-control
+	patches.apparmor/apparmor-profiles-seq_file
 
 	########################################################
 	# Address space layout randomization
