--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,9 @@
 	########################################################
 	patches.kernel.org/patch-3.3.1
 
+	# 3.3.1 regression
+	patches.fixes/revert-ath9k-fix-going-to-full-sleep-on-PS-idle.patch
+
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
 	# Patches in patches.rpmify are applied to both -vanilla
