Drivers: scsi: storvsc: Account for in-transit packets in the RESET path.

--- a/series.conf
+++ b/series.conf
@@ -237,6 +237,7 @@
 	########################################################
 	patches.suse/suse-hv-storvsc-ignore-ata_16.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
+	patches.fixes/hv-storvsc-reset-wait.patch
 
         ########################################################
         # Networking, IPv6
