- Linux 3.3.2. - Delete   patches.fixes/revert-ath9k-fix-going-to-full-sleep-on-PS-idle.patch.

--- a/series.conf
+++ b/series.conf
@@ -28,9 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-3.3.1
-
-	# 3.3.1 regression
-	patches.fixes/revert-ath9k-fix-going-to-full-sleep-on-PS-idle.patch
+	patches.kernel.org/patch-3.3.1-2
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
