--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-3.3.1
 	patches.kernel.org/patch-3.3.1-2
+	patches.kernel.org/patch-3.3.2-3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -410,9 +411,6 @@
 	patches.suse/btrfs-0020-Remove-BUG_ON-from-__finish_chunk_alloc.patch
 	patches.suse/btrfs-error-varargs
 	patches.suse/btrfs-handle-EIO
-
-	# 3.3
-	patches.suse/btrfs-REVERT-increase-the-global-block-reserve-estim.patch
 
 	########################################################
 	# Reiserfs Patches
