dl2k: Tighten ioctl permissions (bnc#758813).

--- a/series.conf
+++ b/series.conf
@@ -374,6 +374,7 @@
 	########################################################
 	patches.fixes/tulip-quad-NIC-ifdown
 	patches.drivers/ehea-modinfo.patch
+	patches.fixes/dl2k-tighten-ioctl-permissions
 
 	########################################################
 	# Wireless Networking
