rpm/kernel-binary.spec.in: Depend on distribution-release, so that the grub entry has correct title (bnc#757565).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -83,6 +83,9 @@ Requires(post): module-init-tools >= 3.4
 # Need a perl-Bootloader with /usr/lib/bootloader/bootloader_entry
 Requires(post): perl-Bootloader >= 0.4.15
 Requires(post): mkinitrd
+# Install the package providing /etc/SuSE-release early enough, so that
+# the grub entry has correct title (bnc#757565)
+Requires(post): distribution-release
 # Do not install p-b and mkinitrd for the install check, the %post script is
 # able to handle this
 #!BuildIgnore: perl-Bootloader mkinitrd
