- rpm/kernel-binary.spec.in: Do not require distribution-release   during build.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -88,7 +88,7 @@ Requires(post): mkinitrd
 Requires(post): distribution-release
 # Do not install p-b and mkinitrd for the install check, the %post script is
 # able to handle this
-#!BuildIgnore: perl-Bootloader mkinitrd
+#!BuildIgnore: perl-Bootloader mkinitrd distribution-release
 # Remove some packages that are installed automatically by the build system,
 # but are not needed to build the kernel
 #!BuildIgnore: autoconf automake gettext-runtime libtool cvs gettext-tools m4 udev fillup insserv
