IA32 emulation: Fix build problem for modular ia32 a.out support.

--- a/series.conf
+++ b/series.conf
@@ -36,6 +36,7 @@
 	patches.rpmify/apm-honor-config_apm_cpu_idle-n
 	patches.rpmify/nouveau-make-vga_switcheroo-code-depend-on-vga_switcheroo
 	patches.rpmify/pti-depends-on-x86-pci
+	patches.rpmify/ia32-emulation-fix-build-problem-for-modular-ia32-a-out-support
 
         ########################################################
         # kABI consistency patches
