--- a/series.conf
+++ b/series.conf
@@ -612,6 +612,9 @@
 	patches.xen/xen3-patch-3.2
 	patches.xen/xen3-patch-3.3
 	patches.xen/xen3-patch-3.4-rc3
+	patches.xen/xen3-patch-3.4-rc4-rc5
+	patches.xen/xen3-patch-3.4-rc5-rc6
+	patches.xen/xen3-ia32-emulation-fix-build-problem-for-modular-ia32-a-out-support
 	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
 	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 	patches.xen/xen3-stack-unwind
@@ -663,4 +666,3 @@
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
 	patches.xen/xen-x86_64-unmapped-initrd
-	patches.xen/ia32-emulation-fix-build-problem-for-modular-ia32-a-out-support
