geodefb: Depend on X86_32.
Disables:
- CONFIG_FB_GEODE_GX1
- CONFIG_FB_GEODE_GX
- CONFIG_FB_GEODE_LX
- CONFIG_FB_GEODE

--- a/series.conf
+++ b/series.conf
@@ -37,6 +37,7 @@
 	patches.rpmify/nouveau-make-vga_switcheroo-code-depend-on-vga_switcheroo
 	patches.rpmify/pti-depends-on-x86-pci
 	patches.rpmify/ia32-emulation-fix-build-problem-for-modular-ia32-a-out-support
+	patches.rpmify/geode-depends-on-x86_32
 
         ########################################################
         # kABI consistency patches
