- X86 acpi_cpufreq: Do not use request_module for autoloading   (bnc#756085). - Refresh patches.xen/xen3-auto-common.diff. - patches.xen/xen3-patch-3.3:

--- a/series.conf
+++ b/series.conf
@@ -228,6 +228,7 @@
 
 ## cpuidle perf events cleanups and related
 	patches.arch/perf_timechart_fix_zero_timestamps.patch
+	patches.drivers/x86_acpi_cpufreq_autoload.patch
 
 	########################################################
 	# AGP, graphics related stuff
