Renamed armv7l to armv7hl, following %_cpu_target convention.

--- a/config.conf
+++ b/config.conf
@@ -41,11 +41,11 @@
 +ppc		ppc/vanilla
 
 # ARM architectures
-+armv7l         armv7l/default
-+armv7l         armv7l/imx51
-+armv7l         armv7l/omap2plus
-+armv7l         armv7l/tegra
-+armv7l         armv7l/u8500
++armv7hl         armv7hl/default
++armv7hl         armv7hl/imx51
++armv7hl         armv7hl/omap2plus
++armv7hl         armv7hl/tegra
++armv7hl         armv7hl/u8500
 
 # SLES
 # identical to ppc64 flavor, all KMP packages need a kernel-default
