rpm/kernel-binary.spec.in: Own the right -kdump initrd (bnc#764500)

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -673,8 +673,8 @@ done
 
     # Add the auto-generated (by mkdumprd) kdump initrd to %ghost so that
     # the file gets removed when uninstalling the kernel.
-    echo '%%ghost /boot/initrd-%kernelrelease-kdump'
-    touch $RPM_BUILD_ROOT/boot/initrd-%kernelrelease-kdump
+    echo '%%ghost /boot/initrd-%kernelrelease-%build_flavor-kdump'
+    touch $RPM_BUILD_ROOT/boot/initrd-%kernelrelease-%build_flavor-kdump
 
     if [ %CONFIG_MODULES = y ]; then
 	find lib/modules/%kernelrelease-%build_flavor \
