usb/net: rndis: break out <linux/rndis.h> defines. only net/hyperv part

--- a/series.conf
+++ b/series.conf
@@ -244,6 +244,7 @@
 	patches.suse/msft-hv-0353-Drivers-hv-util-Properly-handle-version-negotiations.patch
 	patches.suse/msft-hv-0354-hv-fix-return-type-of-hv_post_message.patch
 	patches.suse/msft-hv-0355-net-hyperv-Add-flow-control-based-on-hi-low-watermar.patch
+	patches.suse/msft-hv-0356-usb-net-rndis-break-out-linux-rndis.h-defines.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
