--- a/series.conf
+++ b/series.conf
@@ -243,6 +243,7 @@
 	patches.suse/msft-hv-0352-Drivers-hv-Get-rid-of-an-unnecessary-check-in-vmbus_.patch
 	patches.suse/msft-hv-0353-Drivers-hv-util-Properly-handle-version-negotiations.patch
 	patches.suse/msft-hv-0354-hv-fix-return-type-of-hv_post_message.patch
+	patches.suse/msft-hv-0355-net-hyperv-Add-flow-control-based-on-hi-low-watermar.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
