--- a/series.conf
+++ b/series.conf
@@ -241,6 +241,7 @@
 	patches.suse/msft-hv-0350-HID-hid-hyperv-Do-not-use-hid_parse_report-directly.patch
 	patches.suse/msft-hv-0351-HID-hyperv-Set-the-hid-drvdata-correctly.patch
 	patches.suse/msft-hv-0352-Drivers-hv-Get-rid-of-an-unnecessary-check-in-vmbus_.patch
+	patches.suse/msft-hv-0353-Drivers-hv-util-Properly-handle-version-negotiations.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
