usb/net: rndis: merge command codes. only net/hyperv part

--- a/series.conf
+++ b/series.conf
@@ -246,6 +246,7 @@
 	patches.suse/msft-hv-0355-net-hyperv-Add-flow-control-based-on-hi-low-watermar.patch
 	patches.suse/msft-hv-0356-usb-net-rndis-break-out-linux-rndis.h-defines.patch
 	patches.suse/msft-hv-0357-usb-net-rndis-remove-ambigous-status-codes.patch
+	patches.suse/msft-hv-0358-usb-net-rndis-merge-command-codes.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
