--- a/series.conf
+++ b/series.conf
@@ -238,6 +238,7 @@
 	# Suse specific stuff
 	########################################################
 	patches.suse/msft-hv-0349-SCSI-storvsc-Properly-handle-errors-from-the-host.patch
+	patches.suse/msft-hv-0350-HID-hid-hyperv-Do-not-use-hid_parse_report-directly.patch
 	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
