Add SolidRun Cubox configuration
- Update config files.
- Add separate cubox configuration.
- mach-dove: Fixup ge00 initialisation.
- spi-orion: convert to new infrastructure.
- config.conf: Add cubox configuration
- rpm/package-descriptions: Add cubox description

Signed-off-by: Hannes Reinecke <hare@suse.de>

--- a/series.conf
+++ b/series.conf
@@ -153,6 +153,7 @@
         # ARM
         ########################################################
 	patches.arch/arm-phys-offset.patch
+	patches.arch/cubox-configuration.patch
 
 	########################################################
 	# S/390
@@ -345,6 +346,8 @@
 	# Device drivers
 	#
 	########################################################
+	patches.drivers/spi-orion-convert-to-new-infrastructure.patch
+	patches.drivers/mach-dove-Fixup-ge00-initialisation.patch
 
 	########################################################
 	# Storage
