mm: correctly synchronize rss-counters at exit/exec (bnc#767152).

--- a/series.conf
+++ b/series.conf
@@ -176,6 +176,7 @@
 	patches.suse/readahead-request-tunables.patch
 	patches.fixes/fs-partitions-efi-c-corrupted-guid-partition-tables-can-cause-kernel-oops
 	patches.fixes/mm-Fix-assertion-mapping-nrpages-0-in-end_writeback.patch
+	patches.fixes/mm-correctly-synchronize-rss-counters-at-exit-exec.patch
 
         ########################################################
         # IPC patches
