--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-3.4.1
 	patches.kernel.org/patch-3.4.1-2
+	patches.kernel.org/patch-3.4.2-3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -249,7 +250,6 @@
 	patches.suse/msft-hv-0356-usb-net-rndis-break-out-linux-rndis.h-defines.patch
 	patches.suse/msft-hv-0357-usb-net-rndis-remove-ambigous-status-codes.patch
 	patches.suse/msft-hv-0358-usb-net-rndis-merge-command-codes.patch
-	patches.suse/suse-hv-pata_piix-ignore-disks.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
         ########################################################
