NFS: Force the legacy idmapper to be single threaded (bnc#766514).

--- a/series.conf
+++ b/series.conf
@@ -266,6 +266,7 @@
 +needs_update37	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfs-adaptive-readdir-plus
 	patches.fixes/nfs-connect-timeout
+	patches.fixes/nfs-force-the-legacy-idmapper-to-be-single-threaded
 
 	########################################################
 	# lockd + statd
