btrfs: use correct device for maps (bnc#672923 bnc#769545).
Signed-off-by: Jiri Slaby <jslaby@suse.cz>

--- a/series.conf
+++ b/series.conf
@@ -261,6 +261,8 @@
 	# btrfs
 	########################################################
 
+	patches.suse/btrfs-use-correct-device-for-maps.patch
+
 	########################################################
 	# Reiserfs Patches
 	########################################################
