--- a/series.conf
+++ b/series.conf
@@ -262,6 +262,7 @@
 	########################################################
 
 	patches.suse/btrfs-use-correct-device-for-maps.patch
+	patches.suse/btrfs-allow-cross-subvolume-file-clone.patch
 
 	########################################################
 	# Reiserfs Patches
