--- a/series.conf
+++ b/series.conf
@@ -289,6 +289,8 @@
 	# btrfs
 	########################################################
 
+	patches.suse/btrfs-use-correct-device-for-maps.patch
+
 	########################################################
 	# Reiserfs Patches
 	########################################################
