btrfs: allow cross-subvolume file clone (bnc#698540).

--- a/series.conf
+++ b/series.conf
@@ -290,6 +290,7 @@
 	########################################################
 
 	patches.suse/btrfs-use-correct-device-for-maps.patch
+	patches.suse/btrfs-allow-cross-subvolume-file-clone.patch
 
 	########################################################
 	# Reiserfs Patches
