omap2+: Revert "mmc: omap_hsmmc: Enable Auto CMD12".

--- a/series.conf
+++ b/series.conf
@@ -156,6 +156,7 @@
 	patches.arch/cubox-configuration.patch
 	patches.arch/arm-omap-add-drm.patch
 	patches.arch/arm-revert-omap-ehci-fix.patch
+	patches.arch/arm-revert-omap-hsmmc-cmd12.patch
 
 	########################################################
 	# S/390
