omap2+: Revert "Fix OMAP EHCI suspend/resume failure (i693)".

--- a/series.conf
+++ b/series.conf
@@ -155,6 +155,7 @@
 	patches.arch/arm-phys-offset.patch
 	patches.arch/cubox-configuration.patch
 	patches.arch/arm-omap-add-drm.patch
+	patches.arch/arm-revert-omap-ehci-fix.patch
 
 	########################################################
 	# S/390
