omap2+: add drm device for the new Xorg driver.

--- a/series.conf
+++ b/series.conf
@@ -157,6 +157,7 @@
         # ARM
         ########################################################
 	patches.arch/arm-phys-offset.patch
+	patches.arch/arm-omap-add-drm.patch
 
 	########################################################
 	# S/390
