--- a/series.conf
+++ b/series.conf
@@ -340,6 +340,7 @@
 	########################################################
 	patches.fixes/hfs-avoid-crash-in-hfs_bnode_create
 	patches.fixes/udf-Use-ret-instead-of-abusing-i-in-udf_load_logical.patch
+	patches.fixes/udf-Avoid-run-away-loop-when-partition-table-length-.patch
 
 	########################################################
 	# Swap-over-NFS
