udf: Fortify loading of sparing table (bnc#769784).

--- a/series.conf
+++ b/series.conf
@@ -341,6 +341,7 @@
 	patches.fixes/hfs-avoid-crash-in-hfs_bnode_create
 	patches.fixes/udf-Use-ret-instead-of-abusing-i-in-udf_load_logical.patch
 	patches.fixes/udf-Avoid-run-away-loop-when-partition-table-length-.patch
+	patches.fixes/udf-Fortify-loading-of-sparing-table.patch
 
 	########################################################
 	# Swap-over-NFS
