udf: Use 'ret' instead of abusing 'i' in udf_load_logicalvol() (bnc#769784).

--- a/series.conf
+++ b/series.conf
@@ -339,6 +339,7 @@
 	# other filesystem stuff
 	########################################################
 	patches.fixes/hfs-avoid-crash-in-hfs_bnode_create
+	patches.fixes/udf-Use-ret-instead-of-abusing-i-in-udf_load_logical.patch
 
 	########################################################
 	# Swap-over-NFS
